--- a/templates/cast-spells.html
+++ b/templates/cast-spells.html
@@ -2,7 +2,7 @@
   <div class="error">{{errorMsg}}</div>
 {{/if}}
 {{#unless errorMsg}}
-<div class="description">{{localize "scu.prepareDescription"}}</div>
+<div class="description">{{localize "scu.castDescription"}}</div>
 
 <div class="tab inventory-group flexcol active" data-group="spells_primary" data-tab="spells_primary_0">
   <ol class="inventory-list scroll scroll-spells_primary">
@@ -13,17 +13,17 @@
       </div>
       
       <div class="spell-uses config">
+        {{#if level.remaining}}
         <div class="tooltip">
           <span class="tooltipcontent">{{ localize "PF1.Prepared" }}</span> 
-          {{ level.prepared }}
+          {{ level.remaining }}
         </div>
-        {{#unless ../spontaneous}}
         <span class="sep"> / </span>
         <div class="tooltip">
           <span class="tooltipcontent">{{localize "PF1.SpellsTotalEachDay"}}</span> 
           {{ level.max }}
         </div>
-        {{/unless}}
+        {{/if}}
       </div>
       <div class="spell-school">{{localize "PF1.SpellSchool"}}</div>
       <div class="item-controls">{{localize "scu.actions"}}</div>
@@ -34,7 +34,7 @@
       <li class="item flexrow {{spell.prepared}}" data-item-id="{{spell._id}}">
         <div class="item-name flexrow">
           <div class="item-image" style="background-image: url({{spell.img}})"></div>
-          <h4 class="name">{{spell.name}}</h4>
+          <h4>{{spell.name}}</h4>
         </div>
         
         <div class="spell-uses flexrow">
@@ -56,14 +56,9 @@
         </div>
         <div class="spell-school">{{ spell.data.school }}</div>
         <div class="item-controls">
-        {{#unless ../../spontaneous}}
-          <a class="item-control spell-uses-add" title="{{ localize "scu.preparedAdd" }}"><i class="fas fa-plus"></i></a>
-          <a class="item-control spell-uses-sub" title="{{ localize "scu.preparedSub" }}"><i class="fas fa-minus"></i></a>
-        {{/unless}}
-        {{#if../../spontaneous}}
-          <a class="item-control spell-uses-add" title="{{ localize "scu.preparedAdd" }}"><i class="fas fa-check"></i></a>
-          <a class="item-control spell-uses-sub" title="{{ localize "scu.preparedSub" }}"><i class="fas fa-times"></i></a>
-        {{/if}}
+          <div class="item-attack tooltip">
+            <a class="item-control item-attack"><img class="icon" src="systems/pf1/icons/actions/gladius.svg"></a>
+          </div>
         </div> 
       </li>
       {{/each}}
@@ -72,8 +67,3 @@
   </ol>
 </div>
 {{/unless}}
-
-<div class="dialog-buttons">
-  <button type="button" name="clear">{{ localize "scu.clearPreparation" }}</button>
-  <button type="button" name="apply">{{ localize "scu.applyChanges" }}</button>
-</div>
