--- a/spellcaster.css
+++ b/spellcaster.css
@@ -11,7 +11,7 @@
   max-width: 200px;
 }
 
-.scu .inventory-list .item.prepared {
+.scu .item-list .item.prepared {
   font-size: large;
   margin-left: 12px;
 }
@@ -20,10 +20,14 @@
   text-align: center;
 }
 
-.scu .inventory-list .item.prepared .spell-uses {
+.scu .item-list .item.prepared .spell-uses {
   font-size: large;
 }
 
-.scu .inventory-list .item .item-attack {
+.scu .item-list .item .item-attack {
   margin-left: 3px;
+}
+
+.scu .sep {
+  padding: 0px 5px;
 }
