--- a/templates/cast-spells.html
+++ b/templates/cast-spells.html
@@ -3,7 +3,7 @@
   <div class="error">{{errorMsg}}</div>
 {{/if}}
 {{#unless errorMsg}}
-<div class="tab spellbook-group flexcol active" data-group="spells_primary" data-tab="spells_primary_0">
+<div class="cast-content tab spellbook-group flexcol active" data-group="spells_primary" data-tab="spells_primary_0">
   <div class="description">{{localize "scu.castDescription"}}</div>
   <ol class="item-list scroll scroll-spells_primary">
     {{#each levels as |level sid|}}
