--- a/templates/prepare-spells.html
+++ b/templates/prepare-spells.html
@@ -3,7 +3,7 @@
   <div class="error">{{errorMsg}}</div>
 {{/if}}
 {{#unless errorMsg}}
-<div class="tab spellbook-group flexcol active" data-group="spells_primary" data-tab="spells_primary_0">
+<div class="spell-content tab spellbook-group flexcol active" data-group="spells_primary" data-tab="spells_primary_0">
   <div class="description">{{localize "scu.prepareDescription"}} {{#if spontaneous}}{{localize "scu.prepareDescriptionAlt"}}{{/if}}</div>
   <ol class="item-list scroll scroll-spells_primary">
     {{#each levels as |level sid|}}
